# LogProject

./: CMakeLists.txt  README.md
app/: main.cpp
client/: client.cpp  client.h
include/common/: log_level.h  message_format.h  statistics.h  utf8_utils.h
logger/: logger.cpp  logger.h
server/: server.cpp  statistics.cpp
tests/: add_test.cpp
tests/common/: all_tests.h  test_log_level.cpp  test_logger.cpp  test_message_format.cpp  test_statistics.cpp  test_utf8_utils.cpp
